# fractal-prompt-foundry

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  benchmark.py  demo.py  fractal_prompt_foundry.py  pyproject.toml  test_foundry.py
artifacts/benchmarks/: summary.json  summary.md
artifacts/benchmarks/code-review-agent/: report.md  result.json
artifacts/benchmarks/hyperliquid-agent-loop/: report.md  result.json
artifacts/benchmarks/support-triage-agent/: report.md  result.json
artifacts/demo-run/: report.md  result.json
examples/: code-review-mission.json  hyperliquid-mission.json  support-triage-mission.json
scripts/: generate_brand_assets.py
